workspace(name = "nccl")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "2e6fa9a61db799266072df115a719a14a9af0e8a630b1f770ef0bd757e68cd71",
    strip_prefix = "bazel-skylib-de3035d605b4c89a62d6da060188e4ab0c5034b9",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/de3035d605b4c89a62d6da060188e4ab0c5034b9.tar.gz"],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

http_archive(
    name = "rules_cuda",
    sha256 = "fdd6afb9f6a34c2c72ab26757c402ee60893c5b97ce4c53cde9c530fc930d564",
    strip_prefix = "rules_cuda-3654266bcf3c26b92b4c21cbc4b4f33bedf5704b",
    urls = ["https://github.com/cloudhan/rules_cuda/archive/3654266bcf3c26b92b4c21cbc4b4f33bedf5704b.tar.gz"],
)
# local_repository(
#     name = "rules_cuda",
#     path = "../../rules_cuda"
# )

load("@rules_cuda//cuda:deps.bzl", "register_detected_cuda_toolchains", "rules_cuda_deps")

rules_cuda_deps()

register_detected_cuda_toolchains()
