workspace(name = "nccl")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "2e6fa9a61db799266072df115a719a14a9af0e8a630b1f770ef0bd757e68cd71",
    strip_prefix = "bazel-skylib-de3035d605b4c89a62d6da060188e4ab0c5034b9",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/de3035d605b4c89a62d6da060188e4ab0c5034b9.tar.gz"],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

http_archive(
    name = "rules_cuda",
    sha256 = "9039c00f5cfe0ac5ff1110d20706bc41d6dbd52c737f303e9a4cea0994ec19a9",
    strip_prefix = "rules_cuda-0503ead4724517db445796cbcdfc8400ce88c853",
    urls = ["https://github.com/cloudhan/rules_cuda/archive/0503ead4724517db445796cbcdfc8400ce88c853.tar.gz"],
)
# local_repository(
#     name = "rules_cuda",
#     path = "../../rules_cuda",
# )

load("@rules_cuda//cuda:repositories.bzl", "register_detected_cuda_toolchains", "rules_cuda_dependencies")

rules_cuda_dependencies()

register_detected_cuda_toolchains()
